[gd_scene load_steps=2 format=3 uid="uid://dkm3x7qv2ywfs"]

[ext_resource type="Script" uid="uid://c6xk4rqnm2vtp" path="res://scripts/ui/menu_inicio.gd" id="1_menu"]

[node name="MenuInicio" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_menu")

[node name="FondoColor" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.12, 0.12, 0.18, 1)

[node name="ContenedorCentral" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -150.0
offset_right = 150.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 30

[node name="Titulo" type="Label" parent="ContenedorCentral"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "jueguito"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Espaciador" type="Control" parent="ContenedorCentral"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="BtnJugar" type="Button" parent="ContenedorCentral"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_horizontal = 4
text = "Jugar"

[node name="BtnAjustes" type="Button" parent="ContenedorCentral"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_horizontal = 4
text = "Ajustes"

[node name="BtnSalir" type="Button" parent="ContenedorCentral"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_horizontal = 4
text = "Salir"

[connection signal="pressed" from="ContenedorCentral/BtnJugar" to="." method="_on_btn_jugar_pressed"]
[connection signal="pressed" from="ContenedorCentral/BtnAjustes" to="." method="_on_btn_ajustes_pressed"]
[connection signal="pressed" from="ContenedorCentral/BtnSalir" to="." method="_on_btn_salir_pressed"]
